--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,55 @@
-h1{
-    color: blue
+
+body {
+    background-color: #2a2c47;
+    background-image: linear-gradient(to bottom, #2a2c47, #2a2c47, #0f0e1a); 
+    color: #5d6087;
+    box-shadow: inset 0 0 50px rgba(255, 255, 255, 0.1), inset 0 0 100px rgba(255, 255, 255, 0.1); 
+}
+
+.logo_pequeno{
+    width: 40px;
+    margin-right: 10px;
+  }
+
+.nav_anonimo{
+    background-color: #2a2c47; 
+    background-image: linear-gradient(to bottom, #2a2c47, #2a2c47, #0f0e1a); 
+    color: #fff; 
+    box-shadow: inset 0 0 50px rgba(255, 255, 255, 0.1), inset 0 0 100px rgba(255, 255, 255, 0.1); 
+}
+.boton_buscar_anonimo{
+    background-color:#3d3f6a; 
+    border-color: #0c0d1c; 
+    color:white;
+    
+}
+.boton_buscar_anonimo_2{
+    background-color:#3d3f6a; 
+    border-color: #2a2c47; 
+    color:white;
+    background-image: linear-gradient(to bottom, #2a2c47, #2a2c47, #0f0e1a);
+    
+}
+/*alinear el boton de buscar de anonimo junto al icono*/
+button.btn {
+    display: flex;
+    align-items: center; 
+    margin-right: 5px;
+}
+/*ajustar un margen del boton de buscar de anonimo junto al icono*/
+button.btn svg {
+    margin-right: 5px; 
+}
+
+/*fondo de los productos*/
+.fondo_producto{
+    background-color: #2a2c47;
+    background-image: linear-gradient(to bottom, #2a2c47, #2a2c47, #0f0e1a); 
+    color: #5d6087;
+   
+}
+
+.prod_1{
+    max-width: 200px
     
 }
