--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     background-color: #2a2c47;
     background-image: linear-gradient(to bottom, #2a2c47, #2a2c47, #0f0e1a); 
     color: #5d6087;
-    box-shadow: inset 0 0 50px rgba(255, 255, 255, 0.1), inset 0 0 100px rgba(255, 255, 255, 0.1); 
+   
 }
 
 .logo_pequeno{
@@ -11,6 +11,7 @@ body {
     margin-right: 10px;
   }
 
+/*NAVEGADOR ANONIMO*/
 .nav_anonimo{
     background-color: #2a2c47; 
     background-image: linear-gradient(to bottom, #2a2c47, #2a2c47, #0f0e1a); 
@@ -41,15 +42,103 @@ button.btn svg {
     margin-right: 5px; 
 }
 
+/*INDEX*/
 /*fondo de los productos*/
-.fondo_producto{
+.index_prod_1{
+    max-width: 250px;
+    background-color: #5d6087;
+    margin: auto;
+    
+}
+.index_disponible {
+    color: green;
+    font-weight: bolder;
+}
+
+.index_precio {
+    color: blue;
+    font-size: 20px;
+}
+
+.index_subscrito {
+    color: red;
+    font-size: 20px;
+}
+
+.index_stock {
+    color: green;
+    font-weight: bolder;
+}
+.letra_blanca{
+    color: #fff;
+}
+.index_foto_fondo{
     background-color: #2a2c47;
-    background-image: linear-gradient(to bottom, #2a2c47, #2a2c47, #0f0e1a); 
-    color: #5d6087;
+}
+.index_btn_comprar{
+   background-color:  #5d6196; border-color: #414478; color:black;
    
 }
 
-.prod_1{
-    max-width: 200px
-    
+/*FICHA*/
+.titulo_producto_ficha {
+    font-weight: bolder;
+    font-size: 40px;
+}
+
+.oferta_en_ficha {
+    color: blue;
+    font-weight: bolder;
+    font-size: 30px;
+}
+
+.precio_oferta_subscrito {
+    font-size: 45px;
+}
+
+.descripcion_ficha {
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+.foto_ficha {
+    height: 450px;
+}
+
+/*NOSOTROS*/
+.borde_nosotros{
+    vertical-align: top; width:20%;
+    border-top: 7px solid #0c0d1c;
+    border-bottom: 7px solid #0c0d1c; 
+    border-left: 7px solid #0c0d1c;
+    border-right: 7px solid #0c0d1c;
+}
+.boton_correo{
+    background-color:#9499df; 
+    border-color: #7073a3; 
+    color:white;
+}
+
+/*REGISTRO*/
+.registro_color{
+    background-color: #7073a3;
+    background-image: #7073a3;
+    color:#7073a3;
+}
+
+/*INGRESAR*/
+.cuadro_login {
+    border: 10px solid black;
+    padding: 40px;
+    width: 500px;
+    margin: 0 auto; 
+}
+.boton_ingresar {
+    background-color: #7073a3;
+    border-color: black; 
+    width: 200px;
+    margin: auto;
+    text-align: center;
+    justify-content: center; 
+    align-items: center;
 }
