--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-
 body {
     background-color: #2a2c47;
-    background-image: linear-gradient(to bottom, #2a2c47, #2a2c47, #0f0e1a); 
+    background-image: linear-gradient(to right, #1a1c35, #59647e);
     color: #5d6087;
-   
 }
+
 
 .logo_pequeno{
     width: 40px;
@@ -13,13 +12,13 @@ body {
 
 /*NAVEGADOR ANONIMO*/
 .nav_anonimo{
-    background-color: #2a2c47; 
-    background-image: linear-gradient(to bottom, #2a2c47, #2a2c47, #0f0e1a); 
-    color: #fff; 
-    box-shadow: inset 0 0 50px rgba(255, 255, 255, 0.1), inset 0 0 100px rgba(255, 255, 255, 0.1); 
+    background-color: #2a2c47;
+    background-image: linear-gradient(to right, #1a1c35, #59647e);
+    color: #5d6087;
+
 }
 .boton_buscar_anonimo{
-    background-color:#3d3f6a; 
+    background-color:#878ab1; 
     border-color: #0c0d1c; 
     color:white;
     
@@ -45,11 +44,13 @@ button.btn svg {
 /*INDEX*/
 /*fondo de los productos*/
 .index_prod_1{
+    background-color: #2a2c47;
+    background-image: linear-gradient(to right, #1a1c35, #59647e);
+    color: #5d6087;
     max-width: 250px;
-    background-color: #5d6087;
-    margin: auto;
-    
+    margin: auto;  
 }
+
 .index_disponible {
     color: green;
     font-weight: bolder;
@@ -93,16 +94,17 @@ button.btn svg {
 }
 
 .precio_oferta_subscrito {
-    font-size: 45px;
+    font-size: 35px;
 }
 
 .descripcion_ficha {
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bolder;
 }
 
 .foto_ficha {
     height: 450px;
+    margin-right: 50px;
 }
 
 /*NOSOTROS*/
@@ -123,7 +125,7 @@ button.btn svg {
 .registro_color{
     background-color: #7073a3;
     background-image: #7073a3;
-    color:#7073a3;
+    color:white;
 }
 
 /*INGRESAR*/
@@ -141,4 +143,25 @@ button.btn svg {
     text-align: center;
     justify-content: center; 
     align-items: center;
+}
+
+/*Carrito de compras*/
+th.carrito_color_tabla {
+    background-color: #a7aad2;
+}
+
+.color_footer{
+    color:#a7aad2;
+}
+
+.color_ropa {
+    background-color: #2a2c47;
+    background-image: linear-gradient(to right, #1a1c35, #59647e);
+    color: white;
+}
+
+/*Adimistrador*/
+.admin_foto{
+    max-width: 450px;
+    margin-left: 200px;  
 }
