Bodega/Ventas por terminar
Se realiza la estructura de las páginas para tener la base, falta terminar detalles como los subrayados en VENTAS.HTML y en BODEGA.HTML cambiar los parámetros para las pantallas.

Se agrega un javascript para poder hacer click al VerDetalles y que mande a la página BOLETA.

--- a/css/style.css
+++ b/css/style.css
@@ -165,3 +165,16 @@ th.carrito_color_tabla {
     max-width: 450px;
     margin-left: 200px;  
 }
+
+/*Subrayado cuando*/
+
+td.ver-detalle {
+    color: blue; 
+    text-decoration: none; 
+    cursor: pointer; 
+  }
+  td.ver-detalle:hover {
+    text-decoration: underline; 
+  }
+
+  
