Carrito/Usuarios Thomas
Danae, cuando tocaste el carrito te piteaste el formato de celular, revisando no funcionaba bien, aun falta arreglar los botones, habian tablas vacias que no dejaban mostrar bien la tabla en modo celular. y hay algunas cosas que arreglé. Está listo lo de usuarios, si falta algo me avisan

--- a/css/style.css
+++ b/css/style.css
@@ -177,4 +177,13 @@ td.ver-detalle {
     text-decoration: underline; 
   }
 
+  .boton_eliminar {
+    background-color: #7073a3;
+    border-color: black; 
+    width: 100px;
+    text-align: center;
+    justify-content: center; 
+    align-items: center;
+    margin: auto ;
+}
   
