Se agrega el validador
A los apartados de registro y a mis datos

faltaría agregar un validador a el mantenedor de usuarios

--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,6 @@ td.ver-detalle:hover {
     display: inline-block;
     margin-right: 5px; /* Espacio entre los botones */
 }
+.error-text {
+    color: red;
+}
