Validador de Mantenedor de productos.
Se corrigen algunos detalles de los otros HTML, se agrega el productos.js .

--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ th.carrito_color_tabla {
     color: white;
 }
 
-/*Adimistrador*/
+/*Admistrador*/
 .admin_foto{
     max-width: 450px;
     margin-left: 200px;  
